# math-tutor

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/core/: logger.py  settings.py
backend/src/services/: conversation_memory.py  document_ingestion.py  document_retrieval.py  response_synthesis.py
backend/src/stores/: documents.py  lexicals.py  semantics.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatArea.tsx  ChatInput.tsx  DocumentUploadModal.tsx  MessageItem.tsx  NewSessionModal.tsx  PageViewerModal.tsx  Sidebar.tsx  StreamingMessage.tsx  WelcomeScreen.tsx
frontend/src/context/: AppContext.tsx
frontend/src/types/: index.ts
frontend/src/utils/: normalizeMath.ts
